@startuml app-viewmodel-boundary
!theme plain
skinparam backgroundColor #FEFEFE
skinparam defaultFontSize 11
skinparam arrowThickness 1.5

title :app and :ui Module Boundary

legend right
  |= Module |= Color |= Description |
  | :app | <#E3F2FD> | Platform Layer |
  | :ui | <#E8F5E9> | UI + ViewModel Layer |
  | :engine | <#FFF3E0> | Domain + Data Layer |
endlegend

' ===== :app Module =====
package ":app Module" #E3F2FD {

  class IMEService {
    - engine: ImeEngine?
    - bridge: InputConnectionBridge?
    + onCreate()
    + onCreateInputView(): View
    + onDestroy()
  }

  class ConfigDataStore {
    - context: Context
    + config: Flow<ImeConfig>
    + updateConfig(transform)
  }

  class InputConnectionBridge {
    - targetSupplier: () -> InputConnection?
  }

  class ImeApplication {
    + onCreate()
  }

  note right of IMEService
    **Responsibilities**
    - Creates ImeEngine (needs ImeDictProvider)
    - Creates and attaches InputConnectionBridge
    - Injects KeyboardViewModel.Factory(engine)
    - Manages Service lifecycle
    - Config persistence (DataStore)
    - Log system initialization
  end note
}

' ===== :ui Module =====
package ":ui Module" #E8F5E9 {

  class KeyboardViewModel {
    - engine: ImeEngine
    + state: StateFlow<ImeState>
    + config: ImeConfig
    + layoutMode: StateFlow<KeyboardLayoutMode>
    + feedbackState: GestureFeedbackState
    + actionPlayer: InputActionPlayer
    + handleGesture(gesture)
    + handleIntent(intent)
    + setKeyboardLayoutMode(mode)
    + updateConfig(transform)
    + updateKeyLayoutState(state)
    + updateCandidateLayoutState(state)
    + updateInputListLayoutState(state)
    + onCleared()
  }

  class KeyboardHost {
    + (Composable) KeyboardHost(viewModel)
  }

  class KeyboardInputActionPlayerHost {
    + UseMode.Animation / DirectInput
  }

  class GestureFeedbackState {
    + touchTrailPoints / pressedKeys / fingerIndicator
  }

  class InputActionPlayer {
    + playbackState
    + row1/row2 indicator
  }

  class EditTextBridge {
    - targetSupplier: () -> EditText?
  }

  note right of KeyboardViewModel
    **Responsibilities**
    - Gesture-to-intent dispatch
    - State exposure (StateFlow<ImeState>)
    - Layout mode management
    - Feedback state holder
    - Action player integration
    - Layout state caching
    - Runtime config modification

    **Not in ViewModel**
    - Creating ImeEngine (:app)
    - Managing InputConnectionBridge (:app)
    - Config persistence (:app)
    - System service lifecycle (:app)
  end note
}

' ===== :engine Module =====
package ":engine Module" #FFF3E0 {
  class ImeEngine {
    + state: StateFlow<ImeState>
    + handleIntent(intent)
    + updateConfig(block)
    + attachEditorBridge(bridge)
  }
  interface ImeEditorBridge {
    + commitText / revokeCommit / ...
  }
}

' ===== Interaction Relationships =====

IMEService --> ImeEngine : create\nImeEngine.create(config, dictProvider)
IMEService --> InputConnectionBridge : create & attach\nengine.attachEditorBridge(bridge)
IMEService --> KeyboardViewModel : inject\nKeyboardViewModel.Factory(engine)

KeyboardViewModel --> ImeEngine : holds reference\nhandleIntent() / state / updateConfig()
KeyboardViewModel *-- GestureFeedbackState : manages
KeyboardViewModel *-- InputActionPlayer : integrates

KeyboardHost --> KeyboardViewModel : viewModel
KeyboardInputActionPlayerHost --> KeyboardViewModel : viewModel

InputConnectionBridge -up-|> ImeEditorBridge : implements [:app]
EditTextBridge -up-|> ImeEditorBridge : implements [:ui]

' ===== Data Flow Notes =====

note bottom of KeyboardViewModel
  **ViewModel Interaction with :app**
  Only through ImeEngine injected via constructor

  Three API categories:
  1. State reading: state, config, layoutMode, feedbackState, actionPlayer
  2. Intent dispatch: handleGesture(), handleIntent()
  3. Runtime config: updateConfig(), setKeyboardLayoutMode(), updateKeyLayoutState()

  ViewModel does not know about:
  - InputConnectionBridge (managed by :app)
  - ConfigDataStore (managed by :app)
  - IMEService lifecycle (managed by :app)
end note

note top of IMEService
  **IMEService Creation Flow**
  1. onCreate(): Create ImeEngine + attach InputConnectionBridge
  2. onCreateInputView(): ComposeView → KeyboardViewModel.Factory(engine) → KeyboardHost
  3. onDestroy(): Disconnect bridges → clear references

  **Key Design**: ViewModel does not hold bridges
  Bridges managed by IMEService
  Lifecycle independent of ViewModel
end note

@enduml
